[gd_scene load_steps=13 format=3 uid="uid://dok8ujkwnougm"]

[ext_resource type="Texture2D" uid="uid://d3bu1rf2nn64a" path="res://Assets/ui/UIbg.png" id="1_i8iac"]
[ext_resource type="Script" uid="uid://basnt2g23il1b" path="res://Script/game_over.gd" id="1_wfe4g"]
[ext_resource type="Texture2D" uid="uid://b60fwpvxc3ehe" path="res://Assets/ui/blue_button00.png" id="2_7eg6d"]
[ext_resource type="Texture2D" uid="uid://cqu5d0co14q8u" path="res://Assets/ui/green_button00.png" id="3_rgx03"]
[ext_resource type="Texture2D" uid="uid://d12ofmpbuu8pl" path="res://Assets/ui/grey_button00.png" id="4_6h5w6"]
[ext_resource type="FontFile" uid="uid://bth5fagu36ydm" path="res://Assets/Pixelart/Font/LilitaOne-Regular.ttf" id="5_qxolj"]

[sub_resource type="LabelSettings" id="LabelSettings_di4ex"]
font = ExtResource("5_qxolj")
font_size = 50
font_color = Color(0, 0.767601, 0.394099, 1)

[sub_resource type="LabelSettings" id="LabelSettings_if6uv"]
font = ExtResource("5_qxolj")
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g8xig"]
font = ExtResource("5_qxolj")
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ci2kr"]
font = ExtResource("5_qxolj")
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_djjt3"]
font = ExtResource("5_qxolj")
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_b10gv"]
font = ExtResource("5_qxolj")
font_size = 30

[node name="game_over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wfe4g")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -192.0
offset_right = 256.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(256, 192)
texture = ExtResource("1_i8iac")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "YOU WIN!"
label_settings = SubResource("LabelSettings_di4ex")

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="move" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Move : "
label_settings = SubResource("LabelSettings_if6uv")

[node name="move_label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "0000"
label_settings = SubResource("LabelSettings_g8xig")

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="time" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Time : "
label_settings = SubResource("LabelSettings_ci2kr")

[node name="time_label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "0000"
label_settings = SubResource("LabelSettings_djjt3")

[node name="TextureButton" type="TextureButton" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture_normal = ExtResource("2_7eg6d")
texture_pressed = ExtResource("3_rgx03")
texture_hover = ExtResource("4_6h5w6")

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Exit"
label_settings = SubResource("LabelSettings_b10gv")

[connection signal="pressed" from="NinePatchRect/MarginContainer/TextureButton" to="." method="on_exit_button_pressed"]
